--- a/content/5.Project/AWS HW monitoring/2. Problem &  PoC.md
+++ b/content/5.Project/AWS HW monitoring/2. Problem &  PoC.md
@@ -10,11 +10,11 @@
 
 자 그럼 문제가 뭐냐? AWS에는 우선 모니터링 시스템이 있다!
 AWS CloudWatch라는 놈인데 여러대도 가능하고 물론 시각화도 더 좋고 분명 좋은 점이 많다. 
-![[2. Problem & Research-1.png|center|600]]
+![[2. Problem & Research-1.png|600]]
 
 
 하지만 문제는 돈을 내야한다는 점이지... 학생인 나는 한달에 40만원 용돈 받으면서 aws쓰면서도 돈이 나가는데 이거까지 달고 쓰면 내 통장은 텅장이 되겠지....그럼 어케하냐? 내가 그냥 만들면 된다는 거지. 해서 팀을 구성한다. 
-![[2. Problem & Research-2.png|center|600]]
+![[2. Problem & Research-2.png|600]]
 * Publisher : 임우찬
 * Broker : 이종근
 * Consumer : 금종현
