--- a/content/5.Project/AWS HW monitoring/2. Problem &  PoC.md
+++ b/content/5.Project/AWS HW monitoring/2. Problem &  PoC.md
@@ -139,5 +139,7 @@ while (true) {
       throw new RuntimeException(e);  
    }```
 
+
 일딴 너무 기니까 다음으로!
--> [[3. DATA Design|다음으로]]
+
+->다음편[[3. DATA Design]]에서 계속
