--- a/content/5.Project/AWS HW monitoring/1. Overview & IDEA.md
+++ b/content/5.Project/AWS HW monitoring/1. Overview & IDEA.md
@@ -1,5 +1,5 @@
 링크
-[[1. Overview&IDEA]]
+[[5.Project/AWS HW monitoring/1. Overview & IDEA]]
 [[2. Problem &  PoC]]
 [[3. DATA Design]]
 [[4. Publisher]]
