[ADD] 2nd project

--- a/content/5.Project/AWS HW monitoring/2. Problem &  PoC.md
+++ b/content/5.Project/AWS HW monitoring/2. Problem &  PoC.md
@@ -1,5 +1,5 @@
 링크
-[[5.Project/AWS HW monitoring/1. Overview & IDEA]]
+[[1. Overview & IDEA - HW monitoring]]
 [[2. Problem &  PoC]]
 [[3. DATA Design]]
 [[4. Publisher]]
